# training_bot

./: .gitignore  README.md  bot.py  config_bot.ini.example  pyproject.toml  requirements.txt
database/: database_actions.py
tgbot/: config.py
tgbot/filters/: role.py  validator.py
tgbot/keyboards/inline_keyboards/admin/: menu.py
tgbot/middlewares/: database.py  role.py
tgbot/misc/: alias.py  callback_data.py  pagination.py
tgbot/models/: role.py
tgbot/routes/: __init__.py
tgbot/routes/admin/: admin_menu.py  welcome.py
tgbot/routes/user/: user_menu.py  welcome.py
tgbot/routes/user/menu/: __init__.py  chart.py  exercises.py  training.py  user_menu.py
tgbot/services/: repository.py
tgbot/states/admin/: menu.py
tgbot/states/user/: menu.py
