[tool.poetry]
name = "training_bot"
version = "0.1.0"
description = ""
authors = ["korchizhinskiy <korchizhinskiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}
asyncio = "^3.4.3"
asyncpg = "^0.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
